<resources>
    <string name="app_name">User Locator</string>
    <string name="action_logout">Logout</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Users</string>
    <string name="second_fragment_label">User Detail</string>

    <string name="unit_celsius">%1$s &#176;C</string>
    <string name="detail_hi_low_temp">High %1$s &#176;C / Low %2$s &#176;C</string>
    <string name="error_no_internet">No internet connection</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_password">Password must be at least 4 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="text_placeholder">-</string>
    <string name="login_remember_me">Remember me</string>

    //Titles
    <string name="title_users">Users</string>
    <string name="title_user_detail">User Details</string>

    //Error Strings
    <string name="error_invalid_credentials">Invalid Credentials</string>
    <string name="error_no_user">User does not exist</string>
    <string name="error_location_permission_denied">Location Permission Denied!</string>
    <string name="title_activity_item_detail_host">ItemDetailHostActivity</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>

    <string name="data_address">%1$s %2$s, %3$s, %4$s</string>
    <string name="data_location">%1$s, %2$s</string>

</resources>